fix video player on mobile screen

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -7,6 +7,10 @@
   font-size: 18px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1,
 h2,
 h3 {
@@ -542,18 +546,28 @@ footer .copyright .container-coffee {
 
 .product-video-wrapper {
   background-color: #fdf4f4;
-  padding: 60px 0;
-  margin-bottom: 60px;
+  padding: 24px 0;
   border-bottom: 12px solid #ebebeb;
+}
+
+.link-divider {
+  margin-bottom: 60px;
 }
 
 .product-video-wrapper .container-coffee {
   display: flex;
-  gap: 60px;
+  flex-direction: column;
+  gap: 32px;
+  padding: 0 24px;
 }
 
 .product-video-wrapper .video-wrapper {
-  width: 60%;
+  width: 100%;
+}
+
+.product-video-wrapper .video-wrapper .swiper-wrapper {
+  width: 100%;
+  height: 240px;
 }
 
 .product-video-wrapper .player-slide {
@@ -568,17 +582,22 @@ footer .copyright .container-coffee {
 }
 
 .product-video-wrapper .video-description {
-  font-size: 18px;
-  line-height: 26px;
+  width: 100%;
+  font-size: 15px;
+  line-height: 23px;
+  letter-spacing: 0.04em;
   color: #1f1f1f;
-  max-width: 400px;
-  width: 40%;
+}
+
+.product-video-wrapper .video-description .button {
+  display: none;
+  margin-top: 24px;
 }
 
 .swiper {
   width: 100%;
   height: 100%;
-  min-height: 360px;
+  /* min-height: 360px; */
 }
 
 .swiper-slide {
@@ -621,7 +640,7 @@ footer .copyright .container-coffee {
 .swiper-pagination-bullets.swiper-pagination-horizontal,
 .swiper-pagination-custom,
 .swiper-pagination-fraction {
-  margin-left: 45%;
+  margin-left: 40%;
   display: flex;
   width: 100px !important;
 }
@@ -638,6 +657,16 @@ footer .copyright .container-coffee {
 .swiper-pagination-horizontal.swiper-pagination-bullets
   .swiper-pagination-bullet {
   background: #3e4444 !important;
+}
+
+.swiper-button-prev,
+.swiper-rtl .swiper-button-next {
+  color: #3e4444 !important;
+}
+
+.swiper-button-next,
+.swiper-rtl .swiper-button-prev {
+  color: #3e4444 !important;
 }
 
 .image-product-modal {
@@ -763,7 +792,7 @@ footer .copyright .container-coffee {
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.2);
-    z-index: 2;
+    z-index: 3;
     box-sizing: border-box;
     overflow-x: hidden;
     display: flex;
@@ -780,7 +809,7 @@ footer .copyright .container-coffee {
     border-radius: 16px;
     margin: auto;
     height: fit-content;
-    margin-top: 160px;
+    margin-top: calc((100vh - 542px) / 2);
     padding: 24px;
     box-sizing: border-box;
     margin-bottom: 60px;
@@ -861,6 +890,35 @@ footer .copyright .container-coffee {
     width: 100%;
     height: 100%;
     object-fit: contain;
+  }
+
+  .product-video-wrapper {
+    padding: 60px 0;
+  }
+
+  .product-video-wrapper .container-coffee {
+    flex-direction: row;
+    gap: 60px;
+  }
+
+  .product-video-wrapper .video-wrapper {
+    width: 50%;
+  }
+
+  .product-video-wrapper .video-wrapper .swiper-wrapper {
+    width: 50%;
+    height: 300px;
+  }
+
+  .product-video-wrapper .video-description {
+    font-size: 18px;
+    line-height: 26px;
+  }
+
+  .product-video-wrapper .video-description .button {
+    display: flex;
+    width: 50%;
+    min-width: 200px;
   }
 }
 
